tests/sqlite/ui-common/grouped_section_wrong_width.rs
use sql_forge::sql_forge;

mod support;

fn main() {
    let include_org = true;

    let _ = sql_forge!(
        sqlx::Postgres,
        support::User,
        "SELECT id, name FROM users {#join_org} {#filter_org}",
        (
            #(join_org, filter_org) = match include_org {
                true => ("", "", ""),
                false => ("", ""),
            },
        ),
    );
}